--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
         <section class="about">
             <h4>About Me</h4>
-            <p> My Nmae is Israa Ahmed hard-working individual who
+            <p> My Name is Esraa Ahmed hard-working individual who
                 Interested in creating beautiful and functional websites.</p>
         </section>
         <section class="contact">
